tests/diagnostics/cases/parse/05_else_in_enum.home.expected
<repo>/tests/diagnostics/cases/parse/05_else_in_enum.home:4:24: error[EP0001]: Expected variant name
  enum Color { Red Green else Blue }
                          ^

1 parse error(s) found
Checking: <repo>/tests/diagnostics/cases/parse/05_else_in_enum.home

Success: Type checking passed ✓
